# MAS_RnD

./: .gitignore  CMakeLists.txt  README.md  Rndmeeting_note03082023txt.txt  elbow_rest.cpp  gen3_7dof_vision_arm_urdf_v12.urdf  gen3_robotiq_2f_85.urdf  main.cpp  mujoco_test.cpp  rnd_building_instruction 2.txt  robot_testing.cpp  robot_testing_clean.cpp  us2.cpp
LauWK-RnDReport/LauWK-RnDSourceCode/: CMakeLists.txt  README.md  elbow_rest.cpp  robot_testing.cpp  us1.cpp  us2.cpp
LauWK-RnDReport/LauWK-RnDSourceCode/src/: controller.cpp  gnu_plotter.cpp  mujoco_env.cpp  robot.hpp
defense/rnd_defense_slides/: bibliography.bib  hbrs-example.tex
log/0/: logname_17_07_2023_17_33_29.csv  run_log_09_08_2023_18_13_22.csv
log/1/: Position_log_17_07_2023_17_36_16.csv
log/6/: Velocity_log_19_07_2023_13_12_41.csv
log/7/: Velocity_log_19_07_2023_13_13_11.csv
log/us1/contact/0/: .~lock.grasp_log_11_08_2023_14_47_14.csv#
log/us1/contactless/41/: grasp_log_11_08_2023_18_55_36.csv
log/us1/contactless/52/: grasp_log_12_08_2023_16_08_40.csv
log/us2/contact/41/: grasp_log_12_08_2023_13_46_34.csv
log/us2/contact/42/: grasp_log_12_08_2023_13_47_04.csv
log/us2/contact/43/: grasp_log_12_08_2023_13_49_23.csv
log/us2/contact/43_contact/: grasp_log_12_08_2023_15_24_02.csv
log/us2/contactless/0/: grasp_log_12_08_2023_14_49_14.csv
log/us2/contactless/12/: grasp_log_12_08_2023_15_05_59.csv
log/us2/contactless/21/: grasp_log_12_08_2023_15_09_49.csv
log/us2/contactless/31/: grasp_log_12_08_2023_15_15_36.csv
log/us2/contactless/4/: grasp_log_12_08_2023_14_53_40.csv
log/us2/contactless/44/: grasp_log_12_08_2023_16_22_01.csv
log/us2/contactless/46/: grasp_log_12_08_2023_16_23_06.csv
log/us2/contactless/47/: grasp_log_12_08_2023_16_23_30.csv
log/us2/contactless/49/: grasp_log_12_08_2023_16_24_44.csv
log/us2/contactless/5/: grasp_log_12_08_2023_14_56_48.csv
log/us2/contactless/8/: grasp_log_12_08_2023_15_01_40.csv
main/: .gitignore  CMakeLists.txt  main.cpp  playground.py  plotting.py  robot_testing.cpp  robot_testing_state_machine.cpp  sos.cpp  us1.cpp  us2_copy.cpp
main/log/us2/contactless/10/: grasp_log_12_08_2023_15_03_10.csv
main/log/us2/contactless/18/: grasp_log_12_08_2023_15_08_46.csv
main/log/us2/contactless/19/: grasp_log_12_08_2023_15_09_04.csv
main/log/us2/contactless/20/: grasp_log_12_08_2023_15_09_24.csv
main/log/us2/contactless/27/: grasp_log_12_08_2023_15_14_10.csv
main/log/us2/contactless/34/: grasp_log_12_08_2023_15_16_54.csv
main/log/us2/contactless/41/: grasp_log_12_08_2023_15_22_22.csv
main/log/us2/contactless/42/: grasp_log_12_08_2023_15_30_37.csv
main/log/us2/contactless/43/: grasp_log_12_08_2023_16_19_55.csv
main/log/us2/contactless/45/: grasp_log_12_08_2023_16_22_31.csv
main/log/us2/contactless/48/: grasp_log_12_08_2023_16_23_48.csv
main/log/us2/contactless/7/: grasp_log_12_08_2023_14_59_47.csv
main/src/: controller.hpp  gen3.cpp  gnu_plotter.cpp  gnu_plotter.hpp  kinova_robot.cpp  logger.cpp  tf_utils.hpp
report/: bibliography.bib  mas_report.cls  report.tex
report/chapters/: abstract.tex  appendix.tex  ch01_introduction.tex  ch02_problemformulation.tex  ch03_stateoftheart.tex  ch04_methodology.tex  ch05_solution.tex  ch06_evaluation_and_results.tex  ch06_experiment.tex  ch07_conclusion.tex  ch07_evaluation_and_results.tex  rnd.drawio
src/: controller.cpp  gnu_plotter.cpp  gnu_plotter.hpp  logger.hpp  tf_utils.cpp
urdf/: gen3_robotiq_2f_85.urdf
